wip migrating to apax 3.0.0 and stc v6

--- a/src/core/app/apax.yml
+++ b/src/core/app/apax.yml
@@ -21,7 +21,8 @@ scripts:
     - echo "Built by ixc in :" $(expr $(date +%s) - $START) "s"
   download:
     - START=$(date +%s)
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
     - echo "Downloaded in :" $(expr $(date +%s) - $START) "s"
   check+download: |
     if [ $AXTARGET ]; then
@@ -45,7 +46,8 @@ scripts:
   postbuild:
     - apax ixc
   watch:
-    - dotnet watch --project ..\\src\\AXOpen.Core.Blazor\\axopen_core_blazor.csproj
+    - dotnet watch --project
+      ..\\src\\AXOpen.Core.Blazor\\axopen_core_blazor.csproj
   rr:
     - apax build
     - apax download
@@ -57,7 +59,10 @@ scripts:
   da:
     - START=$(date +%s)
     - apax do-it-all
-    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in :" $(expr $(date +%s) - $START) "s"
+    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
+      :" $(expr $(date +%s) - $START) "s"
   r:
     - apax plc-mode set stop -t $AXTARGET -y
     - apax plc-mode set run -t $AXTARGET -y
+installStrategy: strict
+apaxVersion: 3.0.0
