--- a/src/abstractions/app/apax.yml
+++ b/src/abstractions/app/apax.yml
@@ -8,9 +8,10 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0' 
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
   "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
 scripts:
   download:
@@ -19,3 +20,5 @@ scripts:
     - dotnet ixc
     - apax sld load --accept-security-disclaimer -t $AXTARGET -i
       $AXTARGETPLATFORMINPUT -r
+installStrategy: strict
+apaxVersion: 3.0.0
