--- a/src/components.abstractions/app/ix/components_abstractions_app.csproj
+++ b/src/components.abstractions/app/ix/components_abstractions_app.csproj
@@ -14,6 +14,8 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
