--- a/src/components.pneumatics/app/ix/PneumaticComponents.csproj
+++ b/src/components.pneumatics/app/ix/PneumaticComponents.csproj
@@ -24,5 +24,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\AXOpen.Components.Pneumatics\ix_ax_axopen_components_pneumatics.csproj" />
 	  <ProjectReference Include="..\..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
+	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	</ItemGroup>
 </Project>
