--- a/src/templates.simple/axpansion/twin/axosimple.csproj
+++ b/src/templates.simple/axpansion/twin/axosimple.csproj
@@ -64,4 +64,9 @@
 			<LastGenOutput>PlcStringResources.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	</ItemGroup>
 </Project>
