--- a/src/components.cognex.vision/src/AXOpen.Cognex.Vision/ix_ax_axopen_components_cognex_vision.csproj
+++ b/src/components.cognex.vision/src/AXOpen.Cognex.Vision/ix_ax_axopen_components_cognex_vision.csproj
@@ -27,5 +27,7 @@
     <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
     <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
     <ProjectReference Include="..\..\..\utils\src\AXOpen.Utils\ix_ax_axopen_utils.csproj" />
+    <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
+    <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
   </ItemGroup>
 </Project>
