--- a/src/components.drives/app/apax.yml
+++ b/src/components.drives/app/apax.yml
@@ -8,13 +8,22 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'  
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
+  "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.components.drives": '0.0.0-dev.0'
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
+  "@ax/system-strings": ^6.0.94
+  "@ax/simatic-1500-clocks": ^6.0.37
 scripts:
   download:
     - apax install
     - apax build
     - dotnet ixc
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
+installStrategy: strict
+apaxVersion: 3.0.0
