--- a/src/components.drives/ctrl/apax.yml
+++ b/src/components.drives/ctrl/apax.yml
@@ -13,3 +13,8 @@ scripts:
 dependencies:
   "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ax/system-strings": ^6.0.94
+installStrategy: strict
+apaxVersion: 3.0.0
