--- a/src/core/app/ix/ix_axopencore.csproj
+++ b/src/core/app/ix/ix_axopencore.csproj
@@ -24,5 +24,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
 	  <ProjectReference Include="..\..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
 	</ItemGroup>
 </Project>
