--- a/src/data/app/apax.yml
+++ b/src/data/app/apax.yml
@@ -9,12 +9,21 @@ variables:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
   "@ix-ax/ax-sdk": '0.0.0-dev.0'
-  "@ax/sld": 2.0.5
 dependencies:
+  "@ax/system-strings": ^6.0.94
+  "@ax/simatic-1500-clocks": ^6.0.37
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
+
   "@ix-ax/axopen.data": '0.0.0-dev.0'
 scripts:
   download:
     - apax install
     - apax build
     - dotnet ixc
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
+installStrategy: strict
+apaxVersion: 3.0.0
