--- a/src/inspectors/app/apax.yml
+++ b/src/inspectors/app/apax.yml
@@ -8,8 +8,13 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'   
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
+  "@ax/system-strings": ^6.0.94
+  "@ax/simatic-1500-clocks": ^6.0.37
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
   "@ix-ax/axopen.inspectors": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
 scripts:
@@ -17,7 +22,8 @@ scripts:
     - apax install
     - apax build
     - dotnet ixc
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
   ixc:
     - START=$(date +%s)
     - dotnet tool restore
@@ -25,7 +31,8 @@ scripts:
     - echo "Built by ixc in :" $(expr $(date +%s) - $START) "s"
   download_only:
     - START=$(date +%s)
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
     - echo "Downloaded in :" $(expr $(date +%s) - $START) "s"
   check+download: |
     if [ $AXTARGET ]; then
@@ -67,3 +74,5 @@ scripts:
   r:
     - apax plc-mode set stop -t $AXTARGET -y
     - apax plc-mode set run -t $AXTARGET -y
+installStrategy: strict
+apaxVersion: 3.0.0
