--- a/src/inspectors/src/AxOpen.Inspectors/ix_ax_axopen_inspectors.csproj
+++ b/src/inspectors/src/AxOpen.Inspectors/ix_ax_axopen_inspectors.csproj
@@ -81,5 +81,6 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
 	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
 	</ItemGroup>
 </Project>
