--- a/src/integrations/_ctrl_/apax.yml
+++ b/src/integrations/_ctrl_/apax.yml
@@ -5,14 +5,14 @@ targets:
   - llvm
   - plcsim
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'  
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
   "@ix-ax/axopen.data": '0.0.0-dev.0'
   "@ix-ax/axopen.probers": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
   "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
 variables:
-  APAX_BUILD_ARGS: [-d]
+  APAX_BUILD_ARGS: [ -d ]
 scripts:
   ixc:
     - START=$(date +%s)
@@ -21,7 +21,8 @@ scripts:
     - echo "Built by ixc in :" $(expr $(date +%s) - $START) "s"
   download:
     - START=$(date +%s)
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
     - echo "Downloaded in :" $(expr $(date +%s) - $START) "s"
   check+download: |
     if [ $AXTARGET ]; then
@@ -45,7 +46,8 @@ scripts:
   postbuild:
     - apax ixc
   watch:
-    - dotnet watch --project ..\\src\\AXOpen.Integrations.Blazor\\axopen_integrations_blazor.csproj
+    - dotnet watch --project
+      ..\\src\\AXOpen.Integrations.Blazor\\axopen_integrations_blazor.csproj
   rr:
     - apax build
     - apax download
@@ -57,7 +59,10 @@ scripts:
   da:
     - START=$(date +%s)
     - apax do-it-all
-    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in :" $(expr $(date +%s) - $START) "s"
+    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
+      :" $(expr $(date +%s) - $START) "s"
   r:
     - apax plc-mode set stop -t $AXTARGET -y
     - apax plc-mode set run -t $AXTARGET -y
+installStrategy: strict
+apaxVersion: 3.0.0
