--- a/src/simatic1500/app/ix/simatic1500_app.csproj
+++ b/src/simatic1500/app/ix/simatic1500_app.csproj
@@ -22,5 +22,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	</ItemGroup>
 </Project>
