--- a/src/timers/app/apax.yml
+++ b/src/timers/app/apax.yml
@@ -10,6 +10,7 @@ variables:
 devDependencies:
   "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
+  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
   "@ix-ax/axopen.timers": '0.0.0-dev.0'
 scripts:
