--- a/src/utils/app/apax.yml
+++ b/src/utils/app/apax.yml
@@ -9,12 +9,18 @@ variables:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
   "@ix-ax/ax-sdk": '0.0.0-dev.0'
-  "@ax/sld": 2.0.5
 dependencies:
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
   "@ix-ax/axopen.utils": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ax/system-serde": ^6.0.94
+  "@ax/system-strings": ^6.0.94
 scripts:
   download:
     - apax install
     - apax build
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
+      $AXTARGETPLATFORMINPUT -r
+installStrategy: strict
+apaxVersion: 3.0.0
