--- a/src/components.festo.drives/app/ix/app_axopen_components_festo_drives.csproj
+++ b/src/components.festo.drives/app/ix/app_axopen_components_festo_drives.csproj
@@ -23,5 +23,10 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\src\AXOpen.Components.Festo.Drives\ix_ax_axopen_components_festo_drives.csproj" />
 	  <ProjectReference Include="..\..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
+	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
+	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
+	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\components.drives\src\AXOpen.Components.Drives\ix_ax_axopen_components_drives.csproj" />
 	</ItemGroup>
 </Project>
