prevents updates on AxoComponent

--- a/src/components.festo.drives/app/apax.yml
+++ b/src/components.festo.drives/app/apax.yml
@@ -2,7 +2,7 @@ name: "app_axopen.components.festo.drives"
 version: 0.0.0
 type: app
 targets:
-  #- plcsim
+  - plcsim
   #- llvm
   - "1500"
 variables:
