--- a/src/components.festo.drives/app/apax.yml
+++ b/src/components.festo.drives/app/apax.yml
@@ -23,6 +23,7 @@ dependencies:
   "@ax/simatic-1500-clocks": ^6.0.37
   "@ax/simatic-1500-distributedio": ^6.0.3
   "@ax/system-strings": ^6.0.94
+  "@ax/sdk": ^2311.0.1
 scripts:
   delta:
     - START=$(date +%s)
@@ -91,4 +92,4 @@ scripts:
   dd:
     - apax delta
 installStrategy: strict
-apaxVersion: 3.0.0
+apaxVersion: 3.1.0
