minor documentation fixies

--- a/docfx/components/toc.yml
+++ b/docfx/components/toc.yml
@@ -9,5 +9,7 @@
       href: ../components.cognex.vision/docs/index.html
     - name: Rexroth Drives
       href: ../components.rexroth.drives/docs/index.html  
+    - name: Festo Drives
+      href: ../components.rexroth.drives/docs/index.html    
     - name: Library template
       href: ../template.axolibrary/docs/index.html
