--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -20,11 +20,11 @@
     <PackageVersion Include="MongoDB.Driver.Core" Version="2.22.0" />
     <PackageVersion Include="Siemens.Simatic.S7.Webserver.API" Version="2.1.4" />
     <!-- AX# START -->
-    <PackageVersion Include="AXSharp.Abstractions" Version="0.18.0-alpha.184" />
-    <PackageVersion Include="AXSharp.Connector" Version="0.18.0-alpha.184" />
-    <PackageVersion Include="AXSharp.Connector.S71500.WebAPI" Version="0.18.0-alpha.184" />
-    <PackageVersion Include="AXSharp.Presentation.Blazor" Version="0.18.0-alpha.184" />
-    <PackageVersion Include="AXSharp.Presentation.Blazor.Controls" Version="0.18.0-alpha.184" />
+    <PackageVersion Include="AXSharp.Abstractions" Version="" />
+    <PackageVersion Include="AXSharp.Connector" Version="" />
+    <PackageVersion Include="AXSharp.Connector.S71500.WebAPI" Version="" />
+    <PackageVersion Include="AXSharp.Presentation.Blazor" Version="" />
+    <PackageVersion Include="AXSharp.Presentation.Blazor.Controls" Version="" />
     <!-- AX# END -->
     <PackageVersion Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.0" />
