--- a/src/templates.simple/ax/.vscode/launch.json
+++ b/src/templates.simple/ax/.vscode/launch.json
@@ -10,6 +10,13 @@
             "request": "launch",
             "program": "${workspaceFolder}",
             "ip": "192.168.0.4"
+        },
+         {
+            "name": "On 10.10.10.115 Debug",
+            "type": "plc-debug",
+            "request": "launch",
+            "program": "${workspaceFolder}",
+            "ip": "10.10.10.115"
         }
     ]
 }
