--- a/src/components.mitsubishi.robotics/src/AXOpen.Components.Mitsubishi.Robotics/ix_ax_axopen_components_mitsubishi_robotics.csproj
+++ b/src/components.mitsubishi.robotics/src/AXOpen.Components.Mitsubishi.Robotics/ix_ax_axopen_components_mitsubishi_robotics.csproj
@@ -85,5 +85,6 @@
 	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\components.robotics\src\AXOpen.Components.Robotics\ix_ax_axopen_components_robotics.csproj" />
+	  <ProjectReference Include="..\..\..\io\src\AXOpen.Io\ix_ax_axopen_io.csproj" />
 	</ItemGroup>
 </Project>
