--- a/src/integrations/src/AXOpen.Integrations.Blazor/axopen_integrations_blazor.csproj
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/axopen_integrations_blazor.csproj
@@ -16,7 +16,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\base\src\AXOpen.Logging\AXOpen.Logging.Serilog.csproj" />
-		<ProjectReference Include="..\..\..\components.cognex.vision\src\AXOpen.Cognex.Vision.Blazor\axopen_cognex_vision_blazor.csproj" />
+		<ProjectReference Include="..\..\..\components.cognex.vision\src\AXOpen.Components.Cognex.Vision.Blazor\axopen_cognex_vision_blazor.csproj" />
 		<ProjectReference Include="..\..\..\core\src\AXOpen.Core.Blazor\axopen_core_blazor.csproj" />
 		<ProjectReference Include="..\..\..\data\src\AXOpen.Data.Blazor\axopen_data_blazor.csproj" />
 		<ProjectReference Include="..\..\..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
