--- a/src/components.rexroth.drives/app/apax.yml
+++ b/src/components.rexroth.drives/app/apax.yml
@@ -2,7 +2,7 @@ name: "app_axopen.components.rexroth.drives"
 version: 0.0.0
 type: app
 targets:
-  #- plcsim
+  - plcsim
   - llvm
   - "1500"
 variables:
@@ -66,6 +66,7 @@ scripts:
     - apax watch
   rr:
     - START=$(date +%s)
+    - apax clean
     - apax install
     - apax build
     - apax ixc
