--- a/src/components.rexroth.drives/app/apax.yml
+++ b/src/components.rexroth.drives/app/apax.yml
@@ -13,6 +13,7 @@ devDependencies:
 dependencies:
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
   "@ix-ax/axopen.components.rexroth.drives": '0.0.0-dev.0'
+  "@ax/system-timer": ^6.0.94
 scripts:
   download:
     - apax install
