add traversal for apax to speed up-builds

--- a/src/traversals/apax/AXSharp.config.json
+++ b/src/traversals/apax/AXSharp.config.json
@@ -1,1 +1,1 @@
-{"OutputProjectFolder":"ix"}
+{"OutputProjectFolder":"ix","UseBase":false,"NoDependencyUpdate":false,"IgnoreS7Pragmas":false,"ProjectFile":"apax_traversal.csproj"}
