--- a/src/template.axolibrary/app/ix/app_apaxappname.csproj
+++ b/src/template.axolibrary/app/ix/app_apaxappname.csproj
@@ -28,11 +28,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\src\projname\ix_ax_axolib.csproj" />
 	  <ProjectReference Include="..\..\..\simatic1500\ctrl\ix\ix_ax_axopen_simatic1500.csproj" />
 	  <ProjectReference Include="..\..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
 	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
-	  <ProjectReference Include="..\..\src\projname\ix_ax_apaxlibname.csproj" />
+	  <ProjectReference Include="app_appconnectorname.csproj" />
 	</ItemGroup>
 </Project>
