--- a/src/components.cognex.vision/app/apax.yml
+++ b/src/components.cognex.vision/app/apax.yml
@@ -1,5 +1,5 @@
 name: "app_axopen.components.cognex.vision"
-version: 0.0.0
+version     : '0.4.3-dev-2311.608'
 type: app
 targets:
   - plcsim
@@ -9,11 +9,11 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'
+  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
   "@ax/sld": 2.0.5
 dependencies:
-  "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
-  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.cognex.vision"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.simatic1500"     : '0.4.3-dev-2311.608'
   "@ax/simatic-1500-clocks": ^6.0.37
   "@ax/system-timer": ^6.0.94
 scripts:
