--- a/src/components.rexroth.drives/ctrl/apax.yml
+++ b/src/components.rexroth.drives/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.components.rexroth.drives"
-version: '0.0.0-dev.0'
+version     : '0.4.3-dev-2311.608'
 type: lib
 targets:
   - llvm
@@ -7,7 +7,7 @@ files:
   - src
   - assets
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'
+  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
 scripts:
   download:
     - apax install
@@ -65,9 +65,9 @@ scripts:
     - apax plc-mode set stop -t $AXTARGET -y
     - apax plc-mode set run -t $AXTARGET -y
 dependencies:
-  "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
-  "@ix-ax/axopen.components.drives": '0.0.0-dev.0'
-  "@ix-ax/axopen.io": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.abstractions"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.components.drives"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.io"     : '0.4.3-dev-2311.608'
   "@ax/system-bitaccess": ^6.0.94
   "@ax/system-math": ^6.0.94
   "@ax/system-strings": ^6.0.94
