--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.probers"
-version: '0.0.0-dev.0'
+version     : '0.4.3-dev-2311.608'
 type: lib
 targets:
   - llvm
@@ -7,11 +7,11 @@ files:
   - src
   - axsharp.companion.json
 dependencies:
-  "@ix-ax/axopen.core": '0.0.0-dev.0'
-  "@ix-ax/axopen.timers": '0.0.0-dev.0'
-  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.timers"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.abstractions"     : '0.4.3-dev-2311.608'
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'
+  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
 variables:
   APAX_BUILD_ARGS: [ -d ]
 
