--- a/src/simatic1500/ctrl/apax.yml
+++ b/src/simatic1500/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.simatic1500"
-version: '0.0.0-dev.0'
+version     : '0.4.3-dev-2311.608'
 type: lib
 targets:
   - llvm
@@ -7,10 +7,10 @@ files:
   - src
   - axsharp.companion.json
 dependencies:
-  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions"     : '0.4.3-dev-2311.608'
   "@ax/simatic-1500-clocks": ^6.0.37
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'
+  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
 scripts:
   postbuild:
     - dotnet ixc
