--- a/src/utils/app/apax.yml
+++ b/src/utils/app/apax.yml
@@ -1,5 +1,5 @@
 name: "utils-app"
-version: 0.0.0
+version     : '0.4.3-dev-2311.608'
 type: app
 targets:
   - plcsim
@@ -8,12 +8,12 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk": '0.0.0-dev.0'
+  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
 dependencies:
-  "@ix-ax/axopen.timers": '0.0.0-dev.0'
-  "@ix-ax/axopen.utils": '0.0.0-dev.0'
-  "@ix-ax/axopen.core": '0.0.0-dev.0'
-  "@ix-ax/axopen.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.timers"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.utils"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.core"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.abstractions"     : '0.4.3-dev-2311.608'
   "@ax/system-serde": ^6.0.94
   "@ax/system-strings": ^6.0.94
 scripts:
