--- a/src/traversals/apax/apax.yml
+++ b/src/traversals/apax/apax.yml
@@ -5,56 +5,55 @@ targets:
   - plcsim
   - llvm
 devDependencies:
-  '@ix-ax/ax-sdk': 0.4.3-dev-2311.608
+  '@ix-ax/ax-sdk': 0.0.0-dev.0
 dependencies:
-  abstractions-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.abstractions': 0.4.3-dev-2311.608
-  app_axopen.components.abb.robotics: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.abb.robotics': 0.4.3-dev-2311.608
-  components.abstractions-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.abstractions': 0.4.3-dev-2311.608
-  app_axopen.components.cognex.vision: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.cognex.vision': 0.4.3-dev-2311.608
-  app_axopen.components.desoutter.tightening: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.desoutter.tightening': 0.4.3-dev-2311.608
-  app_axopen.components.drives: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.drives': 0.4.3-dev-2311.608
-  elementscomponents: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.elements': 0.4.3-dev-2311.608
-  app_axopen.components.festo.drives: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.festo.drives': 0.4.3-dev-2311.608
-  app_axopen.components.mitsubishi.robotics: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.mitsubishi.robotics': 0.4.3-dev-2311.608
-  pneumaticcomponents: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.pneumatics': 0.4.3-dev-2311.608
-  app_axopen.components.rexroth.drives: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.rexroth.drives': 0.4.3-dev-2311.608
-  app_axopen.components.rexroth.press: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.rexroth.press': 0.4.3-dev-2311.608
-  app_axopen.components.robotics: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.robotics': 0.4.3-dev-2311.608
-  app_axopen.components.ur.robotics: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.components.ur.robotics': 0.4.3-dev-2311.608
-  ix_axopencore: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.core': 0.4.3-dev-2311.608
-  axopen.data-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.data': 0.4.3-dev-2311.608
-  axopen.inspectors: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.inspectors': 0.4.3-dev-2311.608
-  axopen.integrations: 0.4.3-dev-2311.608
-  axopen.integrations-ctrl: 0.0.0-dev.0
-  app_axopen.io: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.io': 0.4.3-dev-2311.608
-  probers-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.probers': 0.4.3-dev-2311.608
-  simatic1500-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.simatic1500': 0.4.3-dev-2311.608
-  app_apaxappname: 0.4.3-dev-2311.608
-  '@ix-ax/apaxlibname': 0.4.3-dev-2311.608
-  axosimple: 0.4.3-dev-2311.608
-  timers-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.timers': 0.4.3-dev-2311.608
-  utils-app: 0.4.3-dev-2311.608
-  '@ix-ax/axopen.utils': 0.4.3-dev-2311.608
+  abstractions-app: 0.0.0-dev.0
+  '@ix-ax/axopen.abstractions': 0.0.0-dev.0
+  app_axopen.components.abb.robotics: 0.0.0-dev.0
+  '@ix-ax/axopen.components.abb.robotics': 0.0.0-dev.0
+  components.abstractions-app: 0.0.0-dev.0
+  '@ix-ax/axopen.components.abstractions': 0.0.0-dev.0
+  app_axopen.components.cognex.vision: 0.0.0-dev.0
+  '@ix-ax/axopen.components.cognex.vision': 0.0.0-dev.0
+  app_axopen.components.desoutter.tightening: 0.0.0-dev.0
+  '@ix-ax/axopen.components.desoutter.tightening': 0.0.0-dev.0
+  app_axopen.components.drives: 0.0.0-dev.0
+  '@ix-ax/axopen.components.drives': 0.0.0-dev.0
+  elementscomponents: 0.0.0-dev.0
+  '@ix-ax/axopen.components.elements': 0.0.0-dev.0
+  app_axopen.components.festo.drives: 0.0.0-dev.0
+  '@ix-ax/axopen.components.festo.drives': 0.0.0-dev.0
+  app_axopen.components.mitsubishi.robotics: 0.0.0-dev.0
+  '@ix-ax/axopen.components.mitsubishi.robotics': 0.0.0-dev.0
+  pneumaticcomponents: 0.0.0-dev.0
+  '@ix-ax/axopen.components.pneumatics': 0.0.0-dev.0
+  app_axopen.components.rexroth.drives: 0.0.0-dev.0
+  '@ix-ax/axopen.components.rexroth.drives': 0.0.0-dev.0
+  app_axopen.components.rexroth.press: 0.0.0-dev.0
+  '@ix-ax/axopen.components.rexroth.press': 0.0.0-dev.0
+  app_axopen.components.robotics: 0.0.0-dev.0
+  '@ix-ax/axopen.components.robotics': 0.0.0-dev.0
+  app_axopen.components.ur.robotics: 0.0.0-dev.0
+  '@ix-ax/axopen.components.ur.robotics': 0.0.0-dev.0
+  ix_axopencore: 0.0.0-dev.0
+  '@ix-ax/axopen.core': 0.0.0-dev.0
+  axopen.data-app: 0.0.0-dev.0
+  '@ix-ax/axopen.data': 0.0.0-dev.0
+  axopen.inspectors: 0.0.0-dev.0
+  '@ix-ax/axopen.inspectors': 0.0.0-dev.0
+  axopen.integrations: 0.0.0-dev.0
+  app_axopen.io: 0.0.0-dev.0
+  '@ix-ax/axopen.io': 0.0.0-dev.0
+  probers-app: 0.0.0-dev.0
+  '@ix-ax/axopen.probers': 0.0.0-dev.0
+  simatic1500-app: 0.0.0-dev.0
+  '@ix-ax/axopen.simatic1500': 0.0.0-dev.0
+  app_apaxappname: 0.0.0-dev.0
+  '@ix-ax/apaxlibname': 0.0.0-dev.0
+  axosimple: 0.0.0-dev.0
+  timers-app: 0.0.0-dev.0
+  '@ix-ax/axopen.timers': 0.0.0-dev.0
+  utils-app: 0.0.0-dev.0
+  '@ix-ax/axopen.utils': 0.0.0-dev.0
 installStrategy: strict
 apaxVersion: 3.1.0
