--- a/src/abstractions/app/apax.yml
+++ b/src/abstractions/app/apax.yml
@@ -1,5 +1,5 @@
 name: "abstractions-app"
-version     : '0.4.3-dev-2311.608'
+version       : '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
@@ -8,11 +8,11 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
+  "@ix-ax/ax-sdk"       : '0.0.0-dev.0'
 dependencies:
-  "@ix-ax/axopen.abstractions"     : '0.4.3-dev-2311.608'
-  "@ix-ax/axopen.timers"     : '0.4.3-dev-2311.608'
-  "@ix-ax/axopen.core"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.abstractions"       : '0.0.0-dev.0'
+  "@ix-ax/axopen.timers"       : '0.0.0-dev.0'
+  "@ix-ax/axopen.core"       : '0.0.0-dev.0'
 scripts:
   download:
     - apax install
