--- a/src/components.drives/ctrl/apax.yml
+++ b/src/components.drives/ctrl/apax.yml
@@ -1,16 +1,16 @@
 name: "@ix-ax/axopen.components.drives"
-version     : '0.4.3-dev-2311.608'
+version       : '0.0.0-dev.0'
 type: lib
 targets:
   - llvm
 files:
   - src
 devDependencies:
-  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
+  "@ix-ax/ax-sdk"       : '0.0.0-dev.0'
 scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ix-ax/axopen.components.abstractions"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.components.abstractions"       : '0.0.0-dev.0'
 installStrategy: strict
 apaxVersion: 3.1.0
