--- a/src/components.elements/app/apax.yml
+++ b/src/components.elements/app/apax.yml
@@ -1,5 +1,5 @@
 name: "elementscomponents"
-version     : '0.4.3-dev-2311.608'
+version       : '0.0.0-dev.0'
 type: app
 targets:
   - "1500"
@@ -9,9 +9,9 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk"     : '0.4.3-dev-2311.608'
+  "@ix-ax/ax-sdk"       : '0.0.0-dev.0'
 dependencies:
-  "@ix-ax/axopen.components.elements"     : '0.4.3-dev-2311.608'
+  "@ix-ax/axopen.components.elements"       : '0.0.0-dev.0'
 scripts:
   download:
     - apax install -L
