--- a/src/components.desoutter.tightening/app/apax.yml
+++ b/src/components.desoutter.tightening/app/apax.yml
@@ -1,5 +1,5 @@
 name: "app_axopen.components.desoutter.tightening"
-version        : '0.4.3-dev-2311.609'
+version        : '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
@@ -9,14 +9,14 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk"        : '0.4.3-dev-2311.609'
+  "@ix-ax/ax-sdk"        : '0.0.0-dev.0'
   "@ax/sld": 2.0.5
 dependencies:
-  "@ix-ax/axopen.core"        : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.timers"        : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.abstractions"        : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.desoutter.tightening"        : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.simatic1500"        : '0.4.3-dev-2311.609'
+  "@ix-ax/axopen.core"        : '0.0.0-dev.0'
+  "@ix-ax/axopen.timers"        : '0.0.0-dev.0'
+  "@ix-ax/axopen.abstractions"        : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.desoutter.tightening"        : '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500"        : '0.0.0-dev.0'
   "@ax/simatic-1500-clocks": ^6.0.37
 scripts:
   delta:
