--- a/src/components.mitsubishi.robotics/ctrl/apax.yml
+++ b/src/components.mitsubishi.robotics/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.components.mitsubishi.robotics"
-version        : '0.4.3-dev-2311.609'
+version        : '0.0.0-dev.0'
 type: lib
 targets:
   - llvm
@@ -7,11 +7,11 @@ files:
   - src
   - axsharp.companion.json
 devDependencies:
-  "@ix-ax/ax-sdk"        : '0.4.3-dev-2311.609'
+  "@ix-ax/ax-sdk"        : '0.0.0-dev.0'
 scripts:
   postbuild:
     - dotnet ixc
-dependencies:S
+dependencies:
   "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
   "@ix-ax/axopen.components.robotics": '0.0.0-dev.0'
   "@ix-ax/axopen.core": '0.0.0-dev.0'
