--- a/src/components.rexroth.drives/app/apax.yml
+++ b/src/components.rexroth.drives/app/apax.yml
@@ -1,5 +1,5 @@
 name: "app_axopen.components.rexroth.drives"
-version        : '0.4.3-dev-2311.609'
+version        : '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
@@ -9,10 +9,10 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk"        : '0.4.3-dev-2311.609'
+  "@ix-ax/ax-sdk"        : '0.0.0-dev.0'
 dependencies:
-  "@ix-ax/axopen.simatic1500"        : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.rexroth.drives"        : '0.4.3-dev-2311.609'
+  "@ix-ax/axopen.simatic1500"        : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.rexroth.drives"        : '0.0.0-dev.0'
   "@ax/system-timer": ^6.0.94
 scripts:
   delta:
