--- a/src/templates.simple/ax/apax.yml
+++ b/src/templates.simple/ax/apax.yml
@@ -1,5 +1,5 @@
 name: "axosimple"
-version         : '0.4.3-dev-2311.609'
+version         : '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
@@ -9,23 +9,23 @@ targets:
 registries:
   '@ix-ax': https://npm.pkg.github.com/
 devDependencies:
-  "@ix-ax/ax-sdk"         : '0.4.3-dev-2311.609'
+  "@ix-ax/ax-sdk"         : '0.0.0-dev.0'
   "@ax/st-lang-contrib-library-toolbox": ^0.17.2
 dependencies:
-  "@ix-ax/axopen.data"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.inspectors"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.elements"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.pneumatics"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.cognex.vision"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.drives"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.rexroth.drives"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.rexroth.press"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.festo.drives"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.abb.robotics"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.mitsubishi.robotics"         : '0.4.3-dev-2311.609'
-  "@ix-ax/axopen.components.ur.robotics"         : '0.4.3-dev-2311.609'
+  "@ix-ax/axopen.data"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.inspectors"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.elements"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.pneumatics"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.cognex.vision"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.drives"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.rexroth.drives"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.rexroth.press"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.festo.drives"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.abb.robotics"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.mitsubishi.robotics"         : '0.0.0-dev.0'
+  "@ix-ax/axopen.components.ur.robotics"         : '0.0.0-dev.0'
 
-  "@ix-ax/axopen.simatic1500"         : '0.4.3-dev-2311.609'
+  "@ix-ax/axopen.simatic1500"         : '0.0.0-dev.0'
 
 variables:
   APAX_BUILD_ARGS: [ -d ]
